--- a/views/displayOnePost.ejs
+++ b/views/displayOnePost.ejs
@@ -14,20 +14,7 @@
                 <div class='date'><%= blogPost.date %></div>
                 <div class='dueDate'><% if(blogPost.dueDate) { %> Due <%= blogPost.dueDate %><% } %></div>
                 <div class="mood">Mood: <%= blogPost.mood %></div>
-                <% if (user.id == blogPost.userId) { %>
-                    <div id="actionsContainer">
-                        <form action="/blogPost/edit/<%= blogPost._id %>" action="GET">
-                            <input type="submit" class="editButton button-18 actionButton" value="Edit">
-                        </form>
-                        <button onclick="deletePost" class="button-18 del actionButton" id="del">Delete</button>
-                        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" target="_blank"
-                            class="twitter-share-button"
-                            data-text="Hi everyone, I just published a new project on my DevDays blog. Check it out! "
-                            data-size="large" data-show-count="false">
-                            Tweet
-                        </a>
-                    </div>
-                <% } %>
+                <%-include ('partials/actions') %>
             </li>
         </ul>
         <script src="/js/localdatetime.js"></script>
