--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,6 +25,6 @@
         <a href='/forgotPassword'>Forgot Password</a>
     </div>
     </div>
-    <script src="js/main.js"></script>
+    <%- include('partials/footer.ejs') %>
 </body>
 </html>
