--- a/views/partials/commentActions.ejs
+++ b/views/partials/commentActions.ejs
@@ -1,3 +1,5 @@
 <% if (user.id == comment.userId) { %>
-        <button onclick="deleteComment" class="button-18 commentDel actionButton">Delete</button>
-<% } %>
+        <div data-id="<%= comment._id %>">
+                <button onclick="deleteComment" class="button-18 commentDel actionButton">Delete</button>
+        </div>
+        <% } %>
